@@ -30,104 +30,108 @@ import ch.scaille.util.helpers.LambdaExt;
 import ch.scaille.util.persistence.DaoFactory;
 import ch.scaille.util.persistence.DaoFactory.FsDsFactory;
 
-@Mojo(name = "generateTestCases", defaultPhase = LifecyclePhase.GENERATE_TEST_SOURCES )
+@Mojo(name = "generateTestCases", defaultPhase = LifecyclePhase.GENERATE_TEST_SOURCES)
 public class JavaTestCaseGeneratorMojo extends AbstractMojo {
 
-	@Parameter( defaultValue = "${project}", readonly = true )
-	private MavenProject project;
+    @Parameter(defaultValue = "${project}", readonly = true)
+    private MavenProject project;
 
-	@Parameter(property = "template", defaultValue = "file:src/test/resources/userResources/templates/TC.template")
-	private String template;
+    @Parameter(property = "template", defaultValue = "file:${project.testResources.testResource.directory}/userResources/templates/TC.template")
+    private String template;
 
-	@Parameter(property = "dictionaryFolder", defaultValue = "file:src/test/resources/dictionaries")
-	private String dictionaryFolder;
+    @Parameter(property = "dictionaryFolder", defaultValue = "file:${project.testResources.testResource.directory}/dictionaries")
+    private String dictionaryFolder;
 
-	@Parameter(property = "dictionary", defaultValue = "default")
-	private String dictionaryLocator;
+    @Parameter(property = "dictionary", defaultValue = "default")
+    private String dictionaryLocator;
 
-	@Parameter(property = "testCases")
-	private Resource testCases;
+    @Parameter(property = "testCases")
+    private Resource testCases;
 
-	@Parameter(property = "outputFolder", defaultValue = "${project.build.directory}/generated-test-sources/tcwriter")
-	private String outputFolder;
+    @Parameter(property = "outputFolder", defaultValue = "${project.build.directory}/generated-test-sources/tcwriter")
+    private String outputFolder;
 
-	private String resolve(String path) {
-		if (!path.startsWith(DaoFactory.FS_DATASOURCE)) {
-			return path;
-		}
-		return DaoFactory.fs(resolveFile(path.substring(DaoFactory.FS_DATASOURCE.length())));
-	}
+    private String resolve(String path) {
+        if (!path.startsWith(DaoFactory.FS_DATASOURCE)) {
+            return path;
+        }
+        return DaoFactory.fs(resolveFile(path.substring(DaoFactory.FS_DATASOURCE.length())));
+    }
 
-	private String resolveFile(String p) {
-		final var path = new File(p);
-		if (path.isAbsolute()) {
-			return path.toString();
-		}
-		return new File(project.getBasedir(), p).toString();
-	}
+    private String resolveFile(String p) {
+        final var path = new File(p);
+        if (path.isAbsolute()) {
+            return path.toString();
+        }
+        return new File(project.getBasedir(), p).toString();
+    }
 
-	@Override
-	public void execute() throws MojoExecutionException {
+    @Override
+    public void execute() throws MojoExecutionException {
 
-		// Defaults
-		if (testCases == null || testCases.getDirectory() == null) {
-			testCases = new Resource();
-			testCases.setDirectory(resolveFile("src/test/resources/testcases"));
-			testCases.addInclude("*.yaml");
-		}
+        // Defaults
+        if (testCases == null || testCases.getDirectory() == null) {
+            testCases = new Resource();
+            testCases.setDirectory(resolveFile(project.getTestResources().getFirst().getDirectory() + "/testcases"));
+            testCases.addInclude("*.yaml");
+        }
 
-		project.addTestCompileSourceRoot(outputFolder);
-		
-		// config folders and build model
-		final var daoFactory = DaoFactory.cpPlus(Set.of(), new FsDsFactory(null));
-		final var mavenModelConfig = new ModelConfig();
-		mavenModelConfig.setDictionaryPath(resolve(dictionaryFolder));
-		mavenModelConfig.setTcPath(resolve(DaoFactory.fs(testCases.getDirectory())));
-		mavenModelConfig.setTemplatePath(resolve(template));
-		mavenModelConfig.setTcExportPath("");
-		final var config = new TCConfig("maven", List.of(mavenModelConfig));
-		final var modelDao = new ModelDao(daoFactory,
-				new ObjectProperty<>("config", new DummyPropertiesGroup(), config), ModelDao.defaultDataHandlers());
-		try {
-			// Search test cases
-			final var scanner = new DirectoryScanner();
-			scanner.setBasedir(new File(testCases.getDirectory()));
-			scanner.setIncludes(testCases.getIncludes().toArray(new String[0]));
-			scanner.setExcludes(testCases.getExcludes().toArray(new String[0]));
-			scanner.scan();
+        project.addTestCompileSourceRoot(outputFolder);
 
-			getLog().debug("Scanner of: " + scanner.getBasedir());
-			getLog().info("Found: " + Arrays.asList(scanner.getIncludedFiles()));
+        // config folders and build model
+        final var daoFactory = DaoFactory.cpPlus(Set.of(), new FsDsFactory(null));
+        final var mavenModelConfig = new ModelConfig();
+        mavenModelConfig.setDictionaryPath(resolve(dictionaryFolder));
+        mavenModelConfig.setTcPath(resolve(DaoFactory.fs(testCases.getDirectory())));
+        mavenModelConfig.setTemplatePath(resolve(template));
+        mavenModelConfig.setTcExportPath("");
+        final var config = new TCConfig("maven", List.of(mavenModelConfig));
+        final var modelDao = new ModelDao(daoFactory,
+                new ObjectProperty<>("config", new DummyPropertiesGroup(), config), ModelDao.defaultDataHandlers());
+        try {
+            // Search test cases
+            final var scanner = new DirectoryScanner();
+            scanner.setBasedir(new File(testCases.getDirectory()));
+            if (!testCases.getIncludes().isEmpty()) {
+                scanner.setIncludes(testCases.getIncludes().toArray(new String[0]));
+            }
+            if (!testCases.getExcludes().isEmpty()) {
+                scanner.setExcludes(testCases.getExcludes().toArray(new String[0]));
+            }
+            scanner.scan();
 
-			// Load dictionary
-			final var testDictionary = modelDao.readTestDictionary(dictionaryLocator)
-					.orElseThrow(() -> new FileNotFoundException(dictionaryLocator));
+            getLog().debug("Scanning of: " + scanner.getBasedir().getAbsolutePath());
+            getLog().info("Found: " + Arrays.asList(scanner.getIncludedFiles()));
 
-			// Generate tests
-			final var generator = new TestCaseToJava(modelDao);
-			Arrays.stream(scanner.getIncludedFiles())
-					.forEach(LambdaExt
-							.uncheckedC(tcFile -> generateTestCase(generator, tcFile, testDictionary, modelDao)));
-		} catch (FileNotFoundException e) {
-			throw new MojoExecutionException("Unable to load dictionary", e);
-		}
+            // Load dictionary
+            final var testDictionary = modelDao.readTestDictionary(dictionaryLocator)
+                    .orElseThrow(() -> new FileNotFoundException(dictionaryLocator));
 
-	}
+            // Generate tests
+            final var generator = new TestCaseToJava(modelDao);
+            Arrays.stream(scanner.getIncludedFiles())
+                    .forEach(LambdaExt
+                            .uncheckedC(tcFile -> generateTestCase(generator, tcFile, testDictionary, modelDao)));
+        } catch (FileNotFoundException e) {
+            throw new MojoExecutionException("Unable to load dictionary", e);
+        }
 
-	private void generateTestCase(final TestCaseToJava generator, String tcFile, final TestDictionary testDictionary,
-			final ModelDao modelDao) throws TestCaseException {
-		final var generationMetadata = new GenerationMetadata(JavaTestCaseGeneratorMojo.class,
-				"dictionary=" + testDictionary.getMetadata());
-		final var testcaseLocator = tcFile.split("\\.")[0];
-		final var testCase = modelDao.readTestCase(testcaseLocator, _ -> testDictionary)
-				.orElseThrow(() -> new RuntimeException("Unable to find test case: " + testcaseLocator));
-		generator.generate(testCase, generationMetadata).writeTo(LambdaExt.uncheckedF2((file, src) -> {
-			final var outputFile = Paths.get(resolve(outputFolder)).resolve(file);
-			getLog().info("Writing " + outputFile);
-			Files.createDirectories(outputFile.getParent());
-			Files.writeString(outputFile, src);
-			return outputFile;
-		}));
-	}
+    }
+
+    private void generateTestCase(final TestCaseToJava generator, String tcFile, final TestDictionary testDictionary,
+                                  final ModelDao modelDao) throws TestCaseException {
+        final var generationMetadata = new GenerationMetadata(JavaTestCaseGeneratorMojo.class,
+                "dictionary=" + testDictionary.getMetadata());
+        final var testcaseLocator = tcFile.split("\\.")[0];
+        final var testCase = modelDao.readTestCase(testcaseLocator, _ -> testDictionary)
+                .orElseThrow(() -> new RuntimeException("Unable to find test case: " + testcaseLocator));
+        generator.generate(testCase, generationMetadata).writeTo(LambdaExt.uncheckedF2((file, src) -> {
+            final var outputFile = Paths.get(resolve(outputFolder)).resolve(file);
+            getLog().info("Writing " + outputFile);
+            Files.createDirectories(outputFile.getParent());
+            Files.writeString(outputFile, src);
+            return outputFile;
+        }));
+    }
 
 }
